# bitcoin2

./: .gitignore  Cargo.toml
contracts/: .gitignore
contracts/contracts/: System.sol  TestContract.sol
contracts/ignition/modules/: Lock.js
contracts/test/: SystemContract.js  TestContract.js
migrations/: 20240403230332_create_double_entry_ledger.sql  20240404010757_seed_legacy_account.sql  20240404010757_seed_legacy_data.sql
src/: block_producer.rs  constants.rs  crypto.rs  db.rs  error.rs  http.rs  lib.rs  main.rs
src/bitcoin_legacy/: mod.rs  sha256d.rs  utxos.rs
src/evm/: mod.rs  postgres.rs  rocksdb.rs  test_utils.rs  upgrade_by_message.rs
src/evm/transaction/: legacy.rs  mod.rs  signature.rs
src/protocol/: legacy_transfer_by_message.rs  mod.rs
src/rpc/: btc2.rs  error.rs  eth.rs  mod.rs  net.rs
