[package]
name = "bitcoin2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
digest = "0.10.7"
dotenv = "0.15.0"
hex = "0.4.3"
hex_lit = "0.1.1"
http-body-util = "0.1.1"
k256 = {version = "0.13.3", features = ["ecdsa"]}
num_enum = "0.7.2"
ripemd = "0.1.3"
#rusqlite = "0.31.0"
sha2 = "0.10.8"
sqlx = {version = "0.7.4", default_features = false, features = ["postgres", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
