[package]
name = "bitcoin2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
digest = "0.10.7"
dotenv = "0.15.0"
hex = "0.4.3"
hex_lit = "0.1.1"
http-body-util = "0.1.1"
k256 = {version = "0.13.3", features = ["ecdsa"]}
num_enum = "0.7.2"
ripemd = "0.1.3"
rusqlite = "0.31.0"
indicatif = "*"
#libsqlite3-sys = "^0.27.0"
anyhow = "*"
revm = {version = "8.0.0", features = ["std", "serde-json", "ethersdb"]}
ethers-core = "*"
ethers-providers = "*"
#rusqlite = "0.31.0"
sha2 = "0.10.8"
sqlx = {git = "https://github.com/launchbadge/sqlx", default_features = false, features = ["postgres", "sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.37", features = ["full", "time"] }
bincode = { version = "2.0.0-rc.3", features= ["derive"]}
tempfile = "3.10.1"
#revm-primitives = "3.1.1"
reth = "0.1.0"
reth-primitives = {git = "https://github.com/paradigmxyz/reth"}
serde_json = "1.0.115"
serde = "1.0.198"
tower-http = {version = "0.5.2", features = ["cors"]}
lazy_static = "1.4.0"
thiserror = "1.0.58"
borsh = { version = "*", features=["derive"] }
borsh-derive = { version = "1.0.0-alpha.6" }
sha3 = "0.10.8"
num-bigint = "0.4.4"
num-traits = "0.2.18"
serde_yaml = "0.9.34"
alloy-rlp = "0.3.4"
rustls-acme = {version = "0.9.2", features=["axum"]}
tokio-stream = "0.1.15"
axum-server = "0.6.0"

[dev-dependencies]
alloy-json-abi = "0.7.0"
ethereum-tx-sign = "6.1.3"
rand_core = "0.6.4"
serde_json = "1.0.115"
tower = { version = "0.4", features = ["util"] }
